# fail2ban-log-parser

./: .tool-versions  CODEOWNERS  Cargo.toml  Makefile  README.md  data.js
.github/: dependabot.yml
.github/actions/install-make/: action.yml
.github/workflows/: ci-js-bindings.yml  ci-python-binding.yml  ci-wasm-bindings.yml  ci.yml  release-js.yml  release-python.yml  release-wasm.yml  release.yml
bindings/js-fail2ban-log-parser/: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
bindings/js-fail2ban-log-parser/.github/workflows/: CI.yml
bindings/js-fail2ban-log-parser/__test__/: index.spec.ts
bindings/js-fail2ban-log-parser/benchmark/: bench.ts
bindings/js-fail2ban-log-parser/examples/: README.md  batch-processing.js  batch-processing.ts  enum-usage.js  enum-usage.ts  error-handling.js  error-handling.ts  parse-log.js  parse-log.ts
bindings/js-fail2ban-log-parser/src/: lib.rs
bindings/py-fail2ban-log-parser/: Cargo.toml  Makefile  README.md  fail2ban_log_parser.pyi  pyproject.toml
bindings/py-fail2ban-log-parser/.github/workflows/: CI.yml
bindings/py-fail2ban-log-parser/benchmark/: bench.py
bindings/py-fail2ban-log-parser/src/: lib.rs
bindings/py-fail2ban-log-parser/tests/: test_parse.py  test_parse_with_errors.py  test_types.py
bindings/wasm-fail2ban-log-parser/: Cargo.toml  Makefile  README.md
bindings/wasm-fail2ban-log-parser/examples/: index.html  package.json  pnpm-lock.yaml  usage.js  vite.config.js
bindings/wasm-fail2ban-log-parser/examples/src/: App.svelte
bindings/wasm-fail2ban-log-parser/src/: lib.rs
bindings/wasm-fail2ban-log-parser/tests/: web.rs
crates/fail2ban-log-parser-core/: Cargo.toml
crates/fail2ban-log-parser-core/benches/: parsing.rs
crates/fail2ban-log-parser-core/examples/: filter_bans.rs  parse_batch.rs  parse_single.rs
crates/fail2ban-log-parser-core/src/: lib.rs
crates/fail2ban-log-parser-core/src/parser/: date.rs  event.rs  header.rs  ip.rs  jail.rs  level.rs  mod.rs  pid.rs  time.rs  timestamp.rs
crates/fail2ban-log-parser-core/tests/: incomplete.rs  multiline.rs  parameterized.rs  parse.rs  types.rs
dev/bench/: data.js
