[workspace]
resolver = "2"
members = [
	"crates/fail2ban-log-parser-core",
	"bindings/py-fail2ban-log-parser",
	"bindings/js-fail2ban-log-parser",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Adrian Villanueva Martinez"]


[[bench]]
name = "parsing"
harness = false
debug = true
lto = true
codegen-units = 1
