
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition.workspace = true
name = "js_fail2ban_log_parser"
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
