[package]
name = "py-fail2ban-log-parser"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fail2ban_log_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["abi3-py310"] }
fail2ban-log-parser-core = { path = "../../crates/fail2ban-log-parser-core/", features = [
	"parallel",
] }
