[package]
name = "wasm-fail2ban-log-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
fail2ban-log-parser-core = { path = "../../crates/fail2ban-log-parser-core/" }
wasm-bindgen = "0.2.115"

[dev-dependencies]
wasm-bindgen-test = "0.3.65"
