[package]
name = "fail2ban-log-parser-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "High-performance fail2ban log parser compiled to WebAssembly"
license = "Apache-2.0"
repository = "https://github.com/adrianvillanueva997/fail2ban-log-parser"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
fail2ban-log-parser-core = { path = "../../crates/fail2ban-log-parser-core/" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
