[package]
name = "fail2ban-log-parser-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"], optional = true }
winnow = "1.0.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
dhat = "0.3"

[lib]
crate-type = ["lib", "cdylib"]

[features]
debug_errors = []
serde = ["dep:serde", "chrono/serde"]

[[bench]]
name = "parsing"
harness = false
