[package]
name = "fail2ban-log-parser-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version = "1.85"
description = "Fast, zero-copy fail2ban log parser built with winnow"
license = "MIT"
repository = "https://github.com/adrianvillanueva997/fail2ban-log-parser"
homepage = "https://github.com/adrianvillanueva997/fail2ban-log-parser"
documentation = "https://docs.rs/fail2ban-log-parser-core"
keywords = ["fail2ban", "parser", "log", "winnow", "security"]
categories = ["parsing", "parser-implementations"]
readme = "../../README.md"

[dependencies]
chrono = "0.4.44"
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
winnow = "1.0.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
dhat = "0.3"

[lib]
crate-type = ["lib"]

[features]
debug_errors = []
parallel = ["dep:rayon"]
serde = ["dep:serde", "chrono/serde"]

[[bench]]
name = "parsing"
harness = false
